--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,12 +1,23 @@
 pipeline {
-    agent any
+  agent any
 
-    stages {
-        stage('Hello') {
-            steps {
-                echo 'Hello World'
-            }
-        }
+  stages {
+    stage('STAGE_1'){
+      steps {
+        sh '''
+        ls -lrt
+        pwd
+        '''
+      }
     }
+  }
+  stages {
+    stage('STAGE_2'){
+      steps {
+        sh '''
+        sleep 5
+        '''
+      }
+    }
+  }
 }
-
